--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,7 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="edit_button">Edit Button</string>
+    <string name="delete_book">Delete Book</string>
+    <string name="edit_book">Edit Book</string>
 </resources>
