--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="name">Name</string>
     <string name="title">Title</string>
     <string name="year">Year</string>
-    <string name="cancel">CANCEL</string>
+    <string name="cancel">Cancel</string>
     <string name="save">SAVE</string>
     <string name="add_new_book">Add New Book</string>
     <string name="author">Author</string>
@@ -25,4 +25,8 @@
     <string name="edit_button">Edit Button</string>
     <string name="delete_book">Delete Book</string>
     <string name="edit_book">Edit Book</string>
+    <string name="no_show_string">There are no books to show. Press the + button to add a book.</string>
+    <string name="enter_title">Enter Title</string>
+    <string name="enter_name">Enter Name</string>
+    <string name="enter_year">Enter Year</string>
 </resources>
